--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +32,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Appointments {
+  justify-content: center;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.Login-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #cecece;
 }
