--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,12 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   max-height: 100vh;
   display: flex;
-  flex-direction: column;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Appointments {
-  justify-content: center;
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.Login-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #cecece;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
